<resources>
    <string name="app_name">"Rake.in"</string>
    <string name="rake_in">Rake.in</string>
    <string name="log_in">Log In</string>
    <string name="please_type">Please type your information</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_user_cr">New user? Create an Account</string>
    <string name="log_in2">Log In</string>
    <string name="register">Create Account</string>
    <string name="create_acc">Create An Account</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="register_store">Register Store</string>
    <string name="store_name">Store Name</string>
    <string name="store_address">Store Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="store_category">Store Category</string>
    <string name="store_description">Store Description</string>
    <string name="product_name">Product Name</string>
    <string name="add_product">Add Product</string>
    <string name="product_price_idr">Product Price (IDR)</string>
    <string name="stocks">Stocks</string>
    <string name="quantity">Quantity</string>
    <string name="cart">Cart</string>
    <string name="check_out">CHECK OUT</string>
    <string name="rp">Rp</string>
    <string name="total">Total</string>
    <string name="please_check_your_order">Please check your order</string>
    <string name="product">Product</string>
    <string name="generate_receipt">GENERATE RECEIPT</string>
    <string name="receipt">Receipt</string>
    <string name="receipt_id">Receipt ID</string>
    <string name="date_timestamp">Date/Timestamp</string>
    <string name="view_sales_activity">View Sales Activity</string>
    <string name="start_a_new_sale">start a new sale</string>
    <string name="total_profit">Total Profit</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_store">My Store</string>
    <string name="catalogue">Catalogue</string>
    <string name="home">home</string>
    <string name="product_details">Product Details</string>
    <string name="product_category">Product Category</string>
    <string name="product_description">Product Description</string>
    <string name="add_to_chart">Add to chart</string>
    <string name="_0">0</string>
    <string name="profit">Profit</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="qty">qty</string>
</resources>